Bug 957024 - Update PannerNode distance calculations to match the web audio spec; r=karlt

Distances less than refDistance should be treated as refDistance when calculating
the gain.

MozReview-Commit-ID: JASGb7jLp5L